styles.css
html {
  font-size: 62.5%;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  background-color: rgb(43, 25, 3);
  align-items: center;
  display: flex;
  height: 100vh;
  justify-content: center;
}

.calculator {
  box-sizing: border-box;

  background-color: burlywood;
  padding: 5px;
  border: 2px solid #4b3333;
  border-radius: 7px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 400px;

  box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
}

.calculator__display {
  /*this will hide any number thats greater than box width*/
  overflow: hidden;
  box-sizing: border-box;
  font-size: 1.714285714em;
  padding: 0.5em 0.75em;
  text-align: right;
  width: 100%;
  font-size: 5rem;
  height: 80px;
  padding: 5px;
  border: 2px solid #4b3333;
  border-radius: 7px;
  margin: 1px;
  background-color: #161010;
  color: #fff;
}
button {
  background: #0e0b22;
  color: #fff;
  padding: 1em;
  margin: 2px;
  border: none;
  border-radius: 4px;
  font-size: 2rem;
}

.calculator__keys {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-row-gap: 5px;
  grid-column-gap: 5px;
}

button:hover {
  cursor: pointer;
  background: #1e1d25;
}

.key--operator {
  background-color: orange;
}
.key--equal {
  background-color: orange;

  color: #fff;
  height: auto;
  grid-area: 2 / 4 / 6 / 5;
}
/*We use this media query to make a website responsive on mobile, tablets, and desktop.  */
@media (max-width: 375px) {
  .calculator {
    box-sizing: border-box;
    overflow: hidden;
  }
  .calculator__display {
    /*this will hide any number thats greater than box width*/
    overflow: hidden;

    box-sizing: border-box;
    font-size: 1.714285714em;
    padding: 0.5em 0.75em;
    text-align: right;
    width: 100%;
    font-size: 5rem;
    height: 80px;
    padding: 5px;
    border: 2px solid #4b3333;
    border-radius: 7px;
    margin: 1px;
    background-color: #161010;
    color: #fff;
    text-align: right;
    padding-right: 20px;
    padding-left: 10px;
  }
}
@media (min-width: 375px) and (orientation: landscape) {
  .calculator {
    box-sizing: border-box;
    overflow: hidden;
  }
  .calculator__display {
    /*this will hide any number thats greater than box width*/
    overflow: hidden;

    box-sizing: border-box;
    font-size: 1.714285714em;
    padding: 0.5em 0.75em;
    text-align: right;
    width: 100%;
    font-size: 5rem;
    height: 80px;
    padding: 5px;
    border: 2px solid #4b3333;
    border-radius: 7px;
    margin: 1px;
    background-color: #161010;
    color: #fff;
    text-align: right;
    padding-right: 20px;
    padding-left: 10px;
  }
}
@media (min-width: 667px) and (orientation: portrait) {
  .calculator {
    box-sizing: border-box;
    overflow: hidden;
  }
  .calculator__display {
    /*this will hide any number thats greater than box width*/
    overflow: hidden;

    box-sizing: border-box;
    font-size: 1.714285714em;
    padding: 0.5em 0.75em;
    text-align: right;
    width: 100%;
    font-size: 5rem;
    height: 80px;
    padding: 5px;
    border: 2px solid #4b3333;
    border-radius: 7px;
    margin: 1px;
    background-color: #161010;
    color: #fff;
    text-align: right;
    padding-right: 20px;
    padding-left: 10px;
  }
}

